# air780e_usb_forward-cli

./: .gitignore  AGENTS.md  README.en.md  README.md  README.zh-CN.md  main.py  messages_viewer.html  pyproject.toml
air780e_usb_forward-cli/: air780e_recording.py  air780e_send.py  settings.py
src/air780e_sms_cli/: __init__.py  cli.py  init_commands.py  listener.py  message_parser.py  sms_sender.py
src/air780e_usb_forward_cli/: __init__.py  cli.py  config.py  init_commands.py  listener.py  message_parser.py  ports.py
src/air780e_usb_forward_cli/commands/: console_cmd.py  init_cmd.py  listen_cmd.py
tests/: test file.txt
