[project]
name = "air780e-usb-forward-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.21.0",
    "pydantic>=2.9.0",
]

[project.scripts]
air780e = "air780e_usb_forward_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
